--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,6 +3,7 @@ driver:
 
 provisioner:
   name: chef_zero
+  deprecations_as_errors: true
 
 verifier:
   name: inspec
@@ -35,7 +36,7 @@ suites:
       - opensuse-13.2
       - centos-5.11
       - centos-6.8
-      - centos-7.2
+      - centos-7.3
   - name: source
     run_list:
       - recipe[test::source]
@@ -45,7 +46,7 @@ suites:
     includes:
       - centos-5.11
       - centos-6.8
-      - centos-7.2
+      - centos-7.3
   - name: source
     run_list:
       - recipe[test::source]
@@ -53,7 +54,7 @@ suites:
     run_list:
       - recipe[test::upstream_repo]
     excludes:
-      - fedora-24 # lacks nginx repo
+      - fedora-25 # lacks nginx repo
       - ubuntu-16.04-chef-12.1
       - freebsd-9.3
       - freebsd-10.3
