[GH-92] add a test suite for passenger install
closes #92
- suite in kitchen.yml
- test recipe with minor modifications

Signed-off-by: Luka Lüdicke <luka.luedicke@dkd.de>

--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -103,3 +103,17 @@ suites:
   - name: modules
     run_list:
       - recipe[test::modules]
+  - name: passenger
+    run_list:
+      - recipe[test::passenger_packages]
+    excludes: # passenger distro install is not compatible with these
+      - fedora-latest
+      - centos-6
+      - centos-7
+      - opensuse-leap
+    attributes:
+      nginx:
+        repo_source: 'passenger'
+        package_name: 'nginx-extras'
+        passenger:
+          install_method: 'package'
