--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,10 @@ env:
   - INSTANCE=modules-opensuse-leap
   - INSTANCE=modules-ubuntu-1404
   - INSTANCE=modules-ubuntu-1604
+#  - INSTANCE=passenger-debian-7 TODO: nginx is not started as a service here
+  - INSTANCE=passenger-debian-8
+#  - INSTANCE=passenger-ubuntu-1404 TODO: nginx is not started as a service here
+  - INSTANCE=passenger-ubuntu-1604
 
 before_script:
   - sudo iptables -L DOCKER || ( echo "DOCKER iptables chain missing" ; sudo iptables -N DOCKER )
