--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -14,20 +14,24 @@ platforms:
       box: mvbcoding/awslinux
   - name: centos-6
   - name: centos-7
-  - name: debian-7
   - name: debian-8
   - name: debian-9
-  - name: fedora-26
+  - name: fedora-27
   - name: freebsd-10
   - name: freebsd-11
   - name: opensuse-leap-42
   - name: ubuntu-14.04
   - name: ubuntu-16.04
-  - name: ubuntu-16.04-chef-12.7
+  - name: centos-7-chef-12.14
+    driver_config:
+      box: bento/centos-7
+    provisioner:
+      require_chef_omnibus: 12.14.89
+  - name: ubuntu-16.04-chef-12.14
     driver_config:
       box: bento/ubuntu-16.04
     provisioner:
-      require_chef_omnibus: 12.7.2
+      require_chef_omnibus: 12.14.89
 
 suites:
   - name: distro_packages
@@ -36,6 +40,7 @@ suites:
     excludes: # these all lack distro packages
       - centos-6
       - centos-7
+      - centos-7-chef-12.14
   - name: source
     run_list:
       - recipe[test::source]
@@ -54,25 +59,28 @@ suites:
     run_list:
       - recipe[test::upstream_repo]
     excludes:
-      - fedora-26 # lacks nginx repo
-      - ubuntu-16.04-chef-12.7
+      - fedora-27 # lacks nginx repo
+      - centos-7-chef-12.14
+      - ubuntu-16.04-chef-12.14
       - freebsd-10
       - freebsd-11
   - name: modules
     run_list:
       - recipe[test::modules]
     excludes:
-      - ubuntu-16.04-chef-12.7
+      - centos-7-chef-12.14
+      - ubuntu-16.04-chef-12.14
       - freebsd-10
       - freebsd-11
   - name: passenger
     run_list:
       - recipe[test::passenger_packages]
     excludes: # passenger distro install is not compatible with these
-      - ubuntu-16.04-chef-12.7
+      - centos-7-chef-12.14
+      - ubuntu-16.04-chef-12.14
       - freebsd-10
       - freebsd-11
       - opensuse-leap-42
       - centos-6
       - centos-7
-      - fedora-26
+      - fedora-27
