--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,95 +24,238 @@ workflows:
       - kitchen/delivery:
           name: delivery
 
-      # distro
       - kitchen/dokken-single:
-          name: distro-amazonlinux-2
-          suite: distro-amazonlinux-2
+          name: distro-packages-amazonlinux-2
+          suite: distro-packages-amazonlinux-2
           requires:
             *lint_and_unit
       - kitchen/dokken-single:
-          name: distro-debian-8
-          suite: distro-debian-8
+          name: distro-packages-debian-8
+          suite: distro-packages-debian-8
           requires:
             *lint_and_unit
       - kitchen/dokken-single:
-          name: distro-debian-9
-          suite: distro-debian-9
+          name: distro-packages-debian-9
+          suite: distro-packages-debian-9
           requires:
             *lint_and_unit
       - kitchen/dokken-single:
-          name: distro-ubuntu-1604
-          suite: distro-ubuntu-1604
+          name: distro-packages-ubuntu-1604
+          suite: distro-packages-ubuntu-1604
           requires:
             *lint_and_unit
       - kitchen/dokken-single:
-          name: distro-ubuntu-1804
-          suite: distro-ubuntu-1804
-          requires:
-            *lint_and_unit
-
-      # repo
-      - kitchen/dokken-single:
-          name: repo-amazonlinux-2
-          suite: repo-amazonlinux-2
+          name: distro-packages-ubuntu-1804
+          suite: distro-packages-ubuntu-1804
           requires:
             *lint_and_unit
       - kitchen/dokken-single:
-          name: repo-centos-7
-          suite: repo-centos-7
+          name: distro-packages-opensuse-leap-42
+          suite: distro-packages-opensuse-leap-42
           requires:
             *lint_and_unit
       - kitchen/dokken-single:
-          name: repo-debian-8
-          suite: repo-debian-8
-          requires:
-            *lint_and_unit
+        name: source-amazonlinux-2
+        suite: source-amazonlinux-2
+        requires:
+          *lint_and_unit
       - kitchen/dokken-single:
-          name: repo-debian-9
-          suite: repo-debian-9
-          requires:
-            *lint_and_unit
+        name: source-debian-8
+        suite: source-debian-8
+        requires:
+          *lint_and_unit
       - kitchen/dokken-single:
-          name: repo-ubuntu-1604
-          suite: repo-ubuntu-1604
-          requires:
-            *lint_and_unit
+        name: source-debian-9
+        suite: source-debian-9
+        requires:
+          *lint_and_unit
       - kitchen/dokken-single:
-          name: repo-ubuntu-1804
-          suite: repo-ubuntu-1804
-          requires:
-            *lint_and_unit
-
-      # epel
+        name: source-centos-7
+        suite: source-centos-7
+        requires:
+          *lint_and_unit
       - kitchen/dokken-single:
-          name: epel-amazonlinux-2
-          suite: epel-amazonlinux-2
-          requires:
-            *lint_and_unit
+        name: source-ubuntu-1604
+        suite: source-ubuntu-1604
+        requires:
+          *lint_and_unit
       - kitchen/dokken-single:
-          name: epel-centos-7
-          suite: epel-centos-7
-          requires:
-            *lint_and_unit
-
-      # passenger
+        name: source-ubuntu-1804
+        suite: source-ubuntu-1804
+        requires:
+          *lint_and_unit
       - kitchen/dokken-single:
-          name: passenger-debian-8
-          suite: passenger-debian-8
-          requires:
-            *lint_and_unit
+        name: source-opensuse-leap-42
+        suite: source-opensuse-leap-42
+        requires:
+          *lint_and_unit
       - kitchen/dokken-single:
-          name: passenger-debian-9
-          suite: passenger-debian-9
-          requires:
-            *lint_and_unit
+        name: epel-centos-7
+        suite: epel-centos-7
+        requires:
+          *lint_and_unit
       - kitchen/dokken-single:
-          name: passenger-ubuntu-1604
-          suite: passenger-ubuntu-1604
-          requires:
-            *lint_and_unit
+        name: source-amazonlinux-2
+        suite: source-amazonlinux-2
+        requires:
+          *lint_and_unit
       - kitchen/dokken-single:
-          name: passenger-ubuntu-1804
-          suite: passenger-ubuntu-1804
-          requires:
-            *lint_and_unit
+        name: source-debian-8
+        suite: source-debian-8
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: source-debian-9
+        suite: source-debian-9
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: source-centos-7
+        suite: source-centos-7
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: source-ubuntu-1604
+        suite: source-ubuntu-1604
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: source-ubuntu-1804
+        suite: source-ubuntu-1804
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: source-opensuse-leap-42
+        suite: source-opensuse-leap-42
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: upstream-repo-amazonlinux-2
+        suite: upstream-repo-amazonlinux-2
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: upstream-repo-debian-8
+        suite: upstream-repo-debian-8
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: upstream-repo-debian-9
+        suite: upstream-repo-debian-9
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: upstream-repo-centos-7
+        suite: upstream-repo-centos-7
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: upstream-repo-ubuntu-1604
+        suite: upstream-repo-ubuntu-1604
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: upstream-repo-ubuntu-1804
+        suite: upstream-repo-ubuntu-1804
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: upstream-repo-opensuse-leap-42
+        suite: upstream-repo-opensuse-leap-42
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: modules-amazonlinux-2
+        suite: modules-amazonlinux-2
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: modules-debian-8
+        suite: modules-debian-8
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: modules-debian-9
+        suite: modules-debian-9
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: modules-centos-7
+        suite: modules-centos-7
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: modules-ubuntu-1604
+        suite: modules-ubuntu-1604
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: modules-ubuntu-1804
+        suite: modules-ubuntu-1804
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: modules-opensuse-leap-42
+        suite: modules-opensuse-leap-42
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: passenger-amazonlinux-2
+        suite: passenger-amazonlinux-2
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: passenger-debian-8
+        suite: passenger-debian-8
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: passenger-debian-9
+        suite: passenger-debian-9
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: passenger-ubuntu-1604
+        suite: passenger-ubuntu-1604
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: passenger-ubuntu-1804
+        suite: passenger-ubuntu-1804
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: stream-amazonlinux-2
+        suite: stream-amazonlinux-2
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: stream-debian-8
+        suite: stream-debian-8
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: stream-debian-9
+        suite: stream-debian-9
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: stream-centos-7
+        suite: stream-centos-7
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: stream-ubuntu-1604
+        suite: stream-ubuntu-1604
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: stream-ubuntu-1804
+        suite: stream-ubuntu-1804
+        requires:
+          *lint_and_unit
+      - kitchen/dokken-single:
+        name: stream-opensuse-leap-42
+        suite: stream-opensuse-leap-42
+        requires:
+          *lint_and_unit
