--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,178 +25,38 @@ workflows:
           name: delivery
 
       - kitchen/dokken-single:
-          name: distro-packages-amazonlinux-2
-          suite: distro-packages-amazonlinux-2
+          name: distro-amazonlinux-2
+          suite: distro-amazonlinux-2
           requires:
             *lint_and_unit
       - kitchen/dokken-single:
-          name: distro-packages-debian-8
-          suite: distro-packages-debian-8
+          name: distro-debian-8
+          suite: distro-debian-8
           requires:
             *lint_and_unit
       - kitchen/dokken-single:
-          name: distro-packages-debian-9
-          suite: distro-packages-debian-9
+          name: distro-debian-9
+          suite: distro-debian-9
           requires:
             *lint_and_unit
       - kitchen/dokken-single:
-          name: distro-packages-ubuntu-1604
-          suite: distro-packages-ubuntu-1604
+          name: distro-ubuntu-1604
+          suite: distro-ubuntu-1604
           requires:
             *lint_and_unit
       - kitchen/dokken-single:
-          name: distro-packages-ubuntu-1804
-          suite: distro-packages-ubuntu-1804
+          name: distro-ubuntu-1804
+          suite: distro-ubuntu-1804
           requires:
             *lint_and_unit
       - kitchen/dokken-single:
-          name: distro-packages-opensuse-leap-42
-          suite: distro-packages-opensuse-leap-42
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: source-amazonlinux-2
-          suite: source-amazonlinux-2
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: source-debian-8
-          suite: source-debian-8
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: source-debian-9
-          suite: source-debian-9
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: source-centos-7
-          suite: source-centos-7
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: source-ubuntu-1604
-          suite: source-ubuntu-1604
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: source-ubuntu-1804
-          suite: source-ubuntu-1804
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: source-opensuse-leap-42
-          suite: source-opensuse-leap-42
+          name: distro-opensuse-leap-42
+          suite: distro-opensuse-leap-42
           requires:
             *lint_and_unit
       - kitchen/dokken-single:
           name: epel-centos-7
           suite: epel-centos-7
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: source-amazonlinux-2
-          suite: source-amazonlinux-2
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: source-debian-8
-          suite: source-debian-8
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: source-debian-9
-          suite: source-debian-9
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: source-centos-7
-          suite: source-centos-7
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: source-ubuntu-1604
-          suite: source-ubuntu-1604
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: source-ubuntu-1804
-          suite: source-ubuntu-1804
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: source-opensuse-leap-42
-          suite: source-opensuse-leap-42
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: upstream-repo-amazonlinux-2
-          suite: upstream-repo-amazonlinux-2
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: upstream-repo-debian-8
-          suite: upstream-repo-debian-8
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: upstream-repo-debian-9
-          suite: upstream-repo-debian-9
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: upstream-repo-centos-7
-          suite: upstream-repo-centos-7
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: upstream-repo-ubuntu-1604
-          suite: upstream-repo-ubuntu-1604
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: upstream-repo-ubuntu-1804
-          suite: upstream-repo-ubuntu-1804
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: upstream-repo-opensuse-leap-42
-          suite: upstream-repo-opensuse-leap-42
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: modules-amazonlinux-2
-          suite: modules-amazonlinux-2
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: modules-debian-8
-          suite: modules-debian-8
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: modules-debian-9
-          suite: modules-debian-9
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: modules-centos-7
-          suite: modules-centos-7
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: modules-ubuntu-1604
-          suite: modules-ubuntu-1604
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: modules-ubuntu-1804
-          suite: modules-ubuntu-1804
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: modules-opensuse-leap-42
-          suite: modules-opensuse-leap-42
           requires:
             *lint_and_unit
       - kitchen/dokken-single:
@@ -222,40 +82,5 @@ workflows:
       - kitchen/dokken-single:
           name: passenger-ubuntu-1804
           suite: passenger-ubuntu-1804
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: stream-amazonlinux-2
-          suite: stream-amazonlinux-2
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: stream-debian-8
-          suite: stream-debian-8
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: stream-debian-9
-          suite: stream-debian-9
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: stream-centos-7
-          suite: stream-centos-7
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: stream-ubuntu-1604
-          suite: stream-ubuntu-1604
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: stream-ubuntu-1804
-          suite: stream-ubuntu-1804
-          requires:
-            *lint_and_unit
-      - kitchen/dokken-single:
-          name: stream-opensuse-leap-42
-          suite: stream-opensuse-leap-42
           requires:
             *lint_and_unit
