--- a/kitchen.yml
+++ b/kitchen.yml
@@ -26,12 +26,14 @@ suites:
   - name: distro
     run_list:
       - recipe[test::distro]
+      - recipe[test::test_site]
     excludes:  # these all lack distro packages
       - centos-6
       - centos-7
   - name: epel
     run_list:
       - recipe[test::epel]
+      - recipe[test::test_site]
     includes:
       - centos-6
       - centos-7
