--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -38,6 +38,11 @@ platforms:
       image: dokken/centos-7
       pid_one_command: /usr/lib/systemd/systemd
 
+  - name: fedora-31
+    driver:
+      image: dokken/fedora-31
+      pid_one_command: /usr/lib/systemd/systemd
+
   - name: ubuntu-16.04
     driver:
       image: dokken/ubuntu-16.04
