--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,26 @@ jobs:
           - 'distro'
           - 'epel'
           - 'passenger'
+        exclude:
+          - os: 'centos-6'
+          suite: 'distro'
+          - os: 'centos-7'
+            suite: 'distro'
+          - os: 'opensuse-leap-15'
+          suite: 'passenger'
+          - os: 'centos-6'
+          suite: 'passenger'
+          - os: 'centos-7'
+          suite: 'passenger'
+          - os: 'amazonlinux-2'
+          suite: 'passenger'
+          - os: 'fedora-30'
+            suite: 'passenger'
+        include:
+          - os: 'centos-6'
+            suite: 'epel'
+          - os: 'centos-7'
+            suite: 'epel'
       fail-fast: false
 
     steps:
