--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,37 +40,41 @@ jobs:
     strategy:
       matrix:
         os:
+          - 'amazonlinux'
           - 'amazonlinux-2'
+          - 'centos-7'
+          - 'debian-8'
           - 'debian-9'
+          - 'fedora-31'
+          - 'opensuse-leap-15'
           - 'ubuntu-1604'
           - 'ubuntu-1804'
-          - 'centos-7'
-          - 'fedora-31'
         suite:
           - 'distro'
+          - 'repo'
           - 'epel'
           - 'passenger'
-        exclude:
-          - os: 'centos-7'
+          exclude:
+            - os: 'centos-7'
             suite: 'distro'
-          - os: 'opensuse-leap-15'
-            suite: 'passenger'
-          - os: 'centos-7'
-            suite: 'passenger'
-          - os: 'amazonlinux-2'
-            suite: 'passenger'
-          - os: 'fedora-31'
-            suite: 'passenger'
-          - os: 'amazonlinux-2'
+            - os: 'amazonlinux-2'
             suite: 'epel'
-          - os: 'debian-9'
+            - os: 'debian-9'
             suite: 'epel'
-          - os: 'ubuntu-1604'
+            - os: 'ubuntu-1604'
             suite: 'epel'
-          - os: 'ubuntu-1804'
+            - os: 'ubuntu-1804'
             suite: 'epel'
-          - os: 'fedora-31'
+            - os: 'fedora-31'
             suite: 'epel'
+            - os: 'opensuse-leap-15'
+              suite: 'passenger'
+            - os: 'centos-7'
+              suite: 'passenger'
+            - os: 'amazonlinux-2'
+              suite: 'passenger'
+            - os: 'fedora-31'
+              suite: 'passenger'
       fail-fast: false
 
     steps:
