--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,11 @@ jobs:
         exclude:
           - os: 'centos-7'
             suite: 'distro'
+          - os: 'amazonlinux'
+            suite: 'epel'
           - os: 'amazonlinux-2'
+            suite: 'epel'
+          - os: 'debian-8'
             suite: 'epel'
           - os: 'debian-9'
             suite: 'epel'
@@ -68,8 +72,12 @@ jobs:
           - os: 'fedora-31'
             suite: 'epel'
           - os: 'opensuse-leap-15'
+            suite: 'epel'
+          - os: 'opensuse-leap-15'
             suite: 'passenger'
           - os: 'centos-7'
+            suite: 'passenger'
+          - os: 'amazonlinux'
             suite: 'passenger'
           - os: 'amazonlinux-2'
             suite: 'passenger'
