--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 ---
 name: ci
 
-on:
+'on':
   pull_request:
   push:
     branches:
@@ -40,16 +40,49 @@ jobs:
     strategy:
       matrix:
         os:
+          - 'amazonlinux'
           - 'amazonlinux-2'
+          - 'centos-7'
+          - 'debian-8'
           - 'debian-9'
+          - 'fedora-31'
+          - 'opensuse-leap-15'
           - 'ubuntu-1604'
           - 'ubuntu-1804'
-          - 'centos-7'
-          - 'fedora-31'
         suite:
           - 'distro'
+          - 'repo'
           - 'epel'
           - 'passenger'
+        exclude:
+          - os: 'centos-7'
+            suite: 'distro'
+          - os: 'amazonlinux'
+            suite: 'epel'
+          - os: 'amazonlinux-2'
+            suite: 'epel'
+          - os: 'debian-8'
+            suite: 'epel'
+          - os: 'debian-9'
+            suite: 'epel'
+          - os: 'ubuntu-1604'
+            suite: 'epel'
+          - os: 'ubuntu-1804'
+            suite: 'epel'
+          - os: 'fedora-31'
+            suite: 'epel'
+          - os: 'opensuse-leap-15'
+            suite: 'epel'
+          - os: 'opensuse-leap-15'
+            suite: 'passenger'
+          - os: 'centos-7'
+            suite: 'passenger'
+          - os: 'amazonlinux'
+            suite: 'passenger'
+          - os: 'amazonlinux-2'
+            suite: 'passenger'
+          - os: 'fedora-31'
+            suite: 'passenger'
       fail-fast: false
 
     steps:
