--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -38,6 +38,11 @@ platforms:
       image: dokken/centos-7
       pid_one_command: /usr/lib/systemd/systemd
 
+  - name: centos-8
+    driver:
+      image: dokken/centos-8
+      pid_one_command: /usr/lib/systemd/systemd
+
   - name: fedora-31
     driver:
       image: dokken/fedora-31
