--- a/kitchen.yml
+++ b/kitchen.yml
@@ -29,6 +29,12 @@ suites:
       - recipe[test::test_site]
     excludes:  # these all lack distro packages
       - centos-7
+  - name: nginx-full
+    run_list:
+      - recipe[test::distro]
+      - recipe[test::test_site]
+    includes: # this may be platform specific
+      - ubuntu-18.04
   - name: repo
     run_list:
       - recipe[test::repo]
