update new suite runlist and add a changelog entry
Signed-off-by: Ben Abrams <me@benabrams.it>

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -31,7 +31,7 @@ suites:
       - centos-7
   - name: nginx-full
     run_list:
-      - recipe[test::distro]
+      - recipe[test::distro_nginx-full]
       - recipe[test::test_site]
     includes: # this may be platform specific
       - ubuntu-18.04
