--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,25 @@ jobs:
             suite: 'passenger'
           - os: 'fedora-31'
             suite: 'passenger'
+          # nginx-full is only tested on ubuntu-18.04\
+          - os: 'amazonlinux'
+            suite: 'nginx-full'
+          - os: 'amazonlinux-2'
+            suite: 'nginx-full'
+          - os: 'centos-7'
+            suite: 'nginx-full'
+          - os: 'amazonlinux'
+            suite: 'nginx-full'
+          - os: 'debian-8'
+            suite: 'nginx-full'
+          - os: 'debian-9'
+            suite: 'nginx-full'
+          - os: 'fedora-31'
+            suite: 'nginx-full'
+          - os: 'opensuse-leap-15'
+            suite: 'nginx-full'
+          - os: 'ubuntu-1604'
+            suite: 'nginx-full'
       fail-fast: false
 
     steps:
