--- a/kitchen.yml
+++ b/kitchen.yml
@@ -29,7 +29,7 @@ suites:
       - recipe[test::test_site]
     excludes:  # these all lack distro packages
       - centos-7
-  - name: nginx-full
+  - name: distro-nginx-full
     run_list:
       - recipe[test::distro_nginx-full]
       - recipe[test::test_site]
