--- a/kitchen.yml
+++ b/kitchen.yml
@@ -35,8 +35,9 @@ suites:
       - recipe[test::test_site]
     includes:  # this may be platform specific
       - ubuntu-18.04
-    inputs:
-      nginx_package_name: nginx-full
+    verifier:
+      inputs:
+        nginx_package_name: nginx-full
   - name: repo
     run_list:
       - recipe[test::repo]
