--- a/test/integration/distro-nginx-full/inspec.yml
+++ b/test/integration/distro-nginx-full/inspec.yml
@@ -1,6 +1,6 @@
 ---
 name: distro-nginx-full
-title: Integration tests for nginx_install
+title: Integration tests for nginx_install using an override for nginx-full
 summary: This InSpec profile contains integration tests for nginx cookbook
 version: 0.1.0
 supports:
