Fix centos 8 in kitchen.yml and ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,6 +82,8 @@ jobs:
             suite: 'passenger'
           - os: 'centos-7'
             suite: 'passenger'
+          - os: 'centos-8'
+            suite: 'passenger'
           - os: 'amazonlinux'
             suite: 'passenger'
           - os: 'amazonlinux-2'
