update circle to remove tests that do not make sense

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,8 @@ jobs:
             suite: 'nginx-full'
           - os: 'centos-7'
             suite: 'nginx-full'
+          - os: 'centos-8'
+            suite: 'nginx-full'
           - os: 'amazonlinux'
             suite: 'nginx-full'
           - os: 'debian-8'
