--- a/kitchen.yml
+++ b/kitchen.yml
@@ -58,3 +58,8 @@ suites:
       - centos-8
       - amazonlinux-2
       - fedora-31
+  - name: invalid-conf
+    run_list:
+      - recipe[test::invalid-conf]
+    includes:  # testing invalid config logic works, no need to run on all platforms
+      - ubuntu-18.04
