Switch kitchen to fedora-latest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
           - 'centos-8'
           - 'debian-9'
           - 'debian-10'
-          - 'fedora-32'
+          - 'fedora-latest'
           - 'opensuse-leap-15'
           - 'ubuntu-1804'
           - 'ubuntu-2004'
@@ -74,7 +74,7 @@ jobs:
             suite: 'epel'
           - os: 'ubuntu-2004'
             suite: 'epel'
-          - os: 'fedora-32'
+          - os: 'fedora-latest'
             suite: 'epel'
           - os: 'opensuse-leap-15'
             suite: 'epel'
@@ -92,7 +92,7 @@ jobs:
             suite: 'nginx-full'
           - os: 'debian-10'
             suite: 'nginx-full'
-          - os: 'fedora-32'
+          - os: 'fedora-latest'
             suite: 'nginx-full'
           - os: 'opensuse-leap-15'
             suite: 'nginx-full'
