--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -35,9 +35,9 @@ platforms:
     driver:
       image: dokken/centos-8
       pid_one_command: /usr/lib/systemd/systemd
-  - name: fedora-32
+  - name: fedora-latest
     driver:
-      image: dokken/fedora-32
+      image: dokken/fedora-latest
       pid_one_command: /usr/lib/systemd/systemd
   - name: ubuntu-18.04
     driver:
