--- a/kitchen.yml
+++ b/kitchen.yml
@@ -23,7 +23,7 @@ platforms:
   - name: centos-8
   - name: debian-9
   - name: debian-10
-  - name: fedora-32
+  - name: fedora-latest
   - name: opensuse-leap-15
   - name: ubuntu-18.04
   - name: ubuntu-20.04
