Kitchen test with CentOS 8 stream

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
           - 'amazonlinux-2'
           - 'centos-7'
           - 'centos-8'
+          - 'centos-stream-8'
           - 'debian-9'
           - 'debian-10'
           - 'fedora-latest'
@@ -86,6 +87,10 @@ jobs:
           - os: 'centos-7'
             suite: 'nginx-full'
           - os: 'centos-8'
+            suite: 'nginx-full'
+          - os: 'centos-stream-8'
+            suite: 'nginx-full'
+          - os: 'centos-stream-8'
             suite: 'nginx-full'
           - os: 'amazonlinux'
             suite: 'nginx-full'
