Update tested platforms
Signed-off-by: Lance Albertson <lance@osuosl.org>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,15 +17,15 @@ jobs:
     strategy:
       matrix:
         os:
-          - 'amazonlinux'
+          - 'almalinux-8'
           - 'amazonlinux-2'
           - 'centos-7'
-          - 'centos-8'
           - 'centos-stream-8'
-          - 'debian-9'
           - 'debian-10'
+          - 'debian-11'
           - 'fedora-latest'
           - 'opensuse-leap-15'
+          - 'rockylinux-8'
           - 'ubuntu-1804'
           - 'ubuntu-2004'
         suite:
@@ -39,15 +39,11 @@ jobs:
             suite: 'repo'
           - os: 'centos-7'
             suite: 'distro'
-          - os: 'centos-8'
-            suite: 'distro'
-          - os: 'amazonlinux'
-            suite: 'epel'
-          - os: 'amazonlinux-2'
-            suite: 'epel'
           - os: 'debian-9'
             suite: 'epel'
           - os: 'debian-10'
+            suite: 'epel'
+          - os: 'debian-11'
             suite: 'epel'
           - os: 'ubuntu-1804'
             suite: 'epel'
@@ -57,35 +53,23 @@ jobs:
             suite: 'epel'
           - os: 'opensuse-leap-15'
             suite: 'epel'
-          - os: 'amazonlinux'
-            suite: 'nginx-full'
           - os: 'amazonlinux-2'
             suite: 'nginx-full'
           - os: 'centos-7'
             suite: 'nginx-full'
-          - os: 'centos-8'
-            suite: 'nginx-full'
-          - os: 'centos-stream-8'
-            suite: 'nginx-full'
           - os: 'centos-stream-8'
             suite: 'nginx-full'
           - os: 'amazonlinux'
             suite: 'nginx-full'
-          - os: 'debian-9'
-            suite: 'nginx-full'
           - os: 'debian-10'
+            suite: 'nginx-full'
+          - os: 'debian-11'
             suite: 'nginx-full'
           - os: 'fedora-latest'
             suite: 'nginx-full'
           - os: 'opensuse-leap-15'
             suite: 'nginx-full'
-          - os: 'amazonlinux'
-            suite: 'repo-overrides'
           - os: 'amazonlinux-2'
-            suite: 'repo-overrides'
-          - os: 'amazonlinux'
-            suite: 'repo-overrides'
-          - os: 'debian-9'
             suite: 'repo-overrides'
           - os: 'opensuse-leap-15'
             suite: 'repo-overrides'
