--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -59,7 +59,7 @@ platforms:
   - name: opensuse-leap-15
     driver:
       image: dokken/opensuse-leap-15
-      pid_one_command: /bin/systemd
+      pid_one_command: /usr/lib/systemd/systemd
 
   - name: rockylinux-8
     driver:
