--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,8 @@ jobs:
             suite: 'repo'
           - os: 'centos-7'
             suite: 'distro'
+          - os: 'amazonlinux-2'
+            suite: 'epel'
           - os: 'debian-9'
             suite: 'epel'
           - os: 'debian-10'
@@ -59,6 +61,10 @@ jobs:
             suite: 'nginx-full'
           - os: 'centos-stream-8'
             suite: 'nginx-full'
+          - os: 'almalinux-8'
+            suite: 'nginx-full'
+          - os: 'rockylinux-8'
+            suite: 'nginx-full'
           - os: 'amazonlinux'
             suite: 'nginx-full'
           - os: 'debian-10'
@@ -70,6 +76,8 @@ jobs:
           - os: 'opensuse-leap-15'
             suite: 'nginx-full'
           - os: 'amazonlinux-2'
+            suite: 'repo-overrides'
+          - os: 'debian-10'
             suite: 'repo-overrides'
           - os: 'opensuse-leap-15'
             suite: 'repo-overrides'
